website/versioned_docs/version-2.14.x/reference/subsystems/golang.mdx
---
title: golang
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options for Golang support.

Backend: <span className="color--primary">`pants.backend.experimental.go`</span>

Config section: <span className="color--primary">`[golang]`</span>

<span className={styles.options}>

## Basic options

### `go_search_paths`

<Option
  cli_repr={`--golang-go-search-paths="['<str>', '<str>', ...]"`}
  env_repr='PANTS_GOLANG_GO_SEARCH_PATHS'
  default_repr={`["<PATH>"]`}
>
A list of paths to search for Go.

Specify absolute paths to directories with the `go` binary, e.g. `/usr/bin`. Earlier entries will be searched first.

The following special strings are supported:

- `<PATH>`, the contents of the PATH environment variable
- `<ASDF>`, all Go versions currently configured by ASDF `(asdf shell, ${HOME}/.tool-versions)`, with a fallback to all installed versions
- `<ASDF_LOCAL>`, the ASDF interpreter with the version in BUILD_ROOT/.tool-versions
  </Option>

### `minimum_expected_version`

<Option
  cli_repr={`--golang-minimum-expected-version=<str>`}
  env_repr='PANTS_GOLANG_MINIMUM_EXPECTED_VERSION'
  default_repr={`1.17`}
>
The minimum Go version the distribution discovered by Pants must support.

For example, if you set `'1.17'`, then Pants will look for a Go binary that is 1.17+, e.g. 1.17 or 1.18.

You should still set the Go version for each module in your `go.mod` with the `go` directive.

Do not include the patch version.

</Option>

## Advanced options

### `subprocess_env_vars`

<Option
  cli_repr={`--golang-subprocess-env-vars="['<str>', '<str>', ...]"`}
  env_repr="PANTS_GOLANG_SUBPROCESS_ENV_VARS"
  default_repr={`[\n  "LANG",\n  "LC_CTYPE",\n  "LC_ALL",\n  "PATH"\n]`}
>
  Environment variables to set when invoking the `go` tool. Entries are either
  strings in the form `ENV_VAR=value` to set an explicit value; or just
  `ENV_VAR` to copy the value from Pants&#x27;s own environment.
</Option>

### `tailor_go_mod_targets`

<Option
  cli_repr={`--[no-]golang-tailor-go-mod-targets`}
  env_repr="PANTS_GOLANG_TAILOR_GO_MOD_TARGETS"
  default_repr={`True`}
>
  If true, add a `go_mod` target with the `tailor` goal wherever there is a
  `go.mod` file.
</Option>

### `tailor_package_targets`

<Option
  cli_repr={`--[no-]golang-tailor-package-targets`}
  env_repr="PANTS_GOLANG_TAILOR_PACKAGE_TARGETS"
  default_repr={`True`}
>
  If true, add a `go_package` target with the `tailor` goal in every directory
  with a `.go` file.
</Option>

### `tailor_binary_targets`

<Option
  cli_repr={`--[no-]golang-tailor-binary-targets`}
  env_repr="PANTS_GOLANG_TAILOR_BINARY_TARGETS"
  default_repr={`True`}
>
  If true, add a `go_binary` target with the `tailor` goal in every directory
  with a `.go` file with `package main`.
</Option>

### `asdf_tool_name`

<Option
  cli_repr={`--golang-asdf-tool-name=<str>`}
  env_repr="PANTS_GOLANG_ASDF_TOOL_NAME"
  default_repr={`go-sdk`}
>
  The ASDF tool name to use when searching for installed Go distributions using
  the ASDF tool manager (https://asdf-vm.com/). The default value for this
  option is for the `go-sdk` ASDF plugin
  (https://github.com/yacchi/asdf-go-sdk.git). There are other plugins. If you
  wish to use one of them, then set this option to the ASDF tool name under
  which that other plugin was installed into ASDF.
</Option>

### `asdf_bin_relpath`

<Option
  cli_repr={`--golang-asdf-bin-relpath=<str>`}
  env_repr="PANTS_GOLANG_ASDF_BIN_RELPATH"
  default_repr={`bin`}
>
  The path relative to an ASDF install directory to use to find the `bin`
  directory within an installed Go distribution. The default value for this
  option works for the `go-sdk` ASDF plugin. Other ASDF plugins that install Go
  may have a different relative path to use.
</Option>

## Deprecated options

None

</span>

